--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,3 +20,6 @@
 
 <button>Click me button</button>
 
+<div id="basicdiagram" style="width: 640px; height: 480px; border-style: dotted; border-width: 1px;" >
+
+
