--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div id="basicdiagram" style="width: 1920px; height: 1080px; border-style: dotted; border-width: 1px;" >
-
+<div id="basicdiagram" style="width: 1920px; height: 1080px; border-style: dotted; border-width: 1px;" ><div></div>
