Screen resolution changed.
Screen resolution changed.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div id="basicdiagram" style="width: 1920px; height: 1080px; border-style: dotted; border-width: 1px;" >
+<div id="basicdiagram" style="width: 1280x; height: 920px; border-style: dotted; border-width: 1px;" >
 </div>
 
 You can see Angular powered Bootstrap features below. This is just a simple accordion to show. 
