ID and Cosmetic Changes
Employee ID System implemented. New adds can be done that way. Needs multiple superiors.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div id="basicdiagram" style="width: 1280x; height: 920px; border-style: dotted; border-width: 1px;" >
 </div>
-
 You can see Angular powered Bootstrap features below. This is just a simple accordion to show. 
-We take full advantage of Angular Powered Strap and not just importing styles.
+We take full advantage of Angular Powered Bootstrap and not just importing styles.
+
+
 <ngb-accordion #acc="ngbAccordion" activeIds="">
         <ngb-panel title="Click on me to see a accordion.">
           <ng-template ngbPanelContent>
@@ -15,5 +16,7 @@ We take full advantage of Angular Powered Strap and not just importing styles.
                         https://ng-bootstrap.github.io/#/components/accordion/examples
                 </ng-template>
               </ngb-panel>
-
       </ngb-accordion>
+
+      To Start Click Initliaze Button afterwards you can add a member when you are updating a member, use ID,Description and Title fields.
+      Updating a member works through person's title field. Superiors and Equals field like the name implies will sort the person in the chart.
